fix opensearch auto config